ChangeLog for the Astro project.

20200117:
	* addd USE_SYSTEMD conditional
	* add getent script

20200116:
	* create an analysis image in the StarTracker
	* eliminate SimpleImage and replace by ImageBuffer
	* add hot pixel interpolation adapter
	* make calibration process more tolerant
	* fix StarTracker
	* add guide rates to the mount	
	* allow server to build guider using guide rates from mount
	* replace all occurencies of readdir by readdir_r for reentrancy

20200115:
	* always install device property files
	* add error messaging for devices.properties
	* add capability to read a property directory

20200113:
	* add Sun and Moon coordinate computation
	* add LuminanceFunction infrastructure to the adapter framework
	* add LuminanceMapping function to the processing system

20200105:
	* add missing psf.cpp tool
	* fix missing function in FourierImage.cpp

20200104:
	* add Pseudo, Wiener and constrained VanCittert deconvolution
	* add processing step for deconvolution

20200103:
	* improve the PeakFinder and the ConnectedComponent class
	* add the WindowedImage class that reduces the backing store
	  requirements in the PeakFinder and the ConnectedComponent
	  classes

20200102:
	* add basic horizon format consisting only on azimuth and altitude
	  angles instead of the full format used by the Theodolite app 
	* add default paths to horizon into the configuration database
	* move default configuration to ~/.astro/config.db
	* add Horizon class and sample horizon file
	* added the astrohorizon program
	* make TwoAngles class comparable so it can be used in a set

20191227:
	* add dew heater stuff to Cooler class
	* add dew heater to ASI driver and Simulator

20191226:
	* add operator*() to the YUV<P> template
	* ensure that a failure to get mount data does not invalidate an
	  exposure in the task queue
	* add proper handling of gain in AsiCcd class
	* change default gain value to -1, which means that the current
	  gain of the camera should be used