@@ -1,0 +1,1 @@
+This directory contains log files from the snowstar daemon
