@@ -11,7 +11,7 @@ User=@astrouser@
 Group=@astrogroup@
 Environment="LD_LIBRARY_PATH=@ICELIBDIR@"
 WorkingDirectory=@prefix@
-ExecStart=@prefix@/sbin/snowstar --debug --base=@prefix@/var/images --database=@prefix@/var/database.db --config=@prefix@/var/database.db --name=telescope --logfile=@prefix@/var/log/snowstar.log --lines=100000 --files=10 --foreground
+ExecStart=@prefix@/sbin/snowstar --debug --base=@prefix@/var/images --database=@prefix@/var/database.db --config=@prefix@/var/database.db --logfile=@prefix@/var/log/snowstar.log --lines=100000 --files=10 --foreground
 StandardOutput=syslog
 StandardError=syslog
 
